src/main/resources/Krakatau-master/tests/assembler/bad/bscpmixup4.j
.class public whocares
.super java/lang/Object

.bootstrap [bs:0] = [1]
.end class
